have set meta og

--- a/EN/Profile/index.html
+++ b/EN/Profile/index.html
@@ -25,11 +25,9 @@
     <title>About | 大塚 晟</title>
     
     <!-- まだ -->
-    <!-- <meta property=”og:title” content=”About | 大塚 晟” />
+    <meta property=”og:title” content=”Makoto Otsuka's home page” />
     <meta property=”og:image” content=”” />
-    <meta property=”og:description” content=”ディスクリプション” />
-    <meta property=”og:url” content=”URL” />
-    <link rel="canonical" href="正規ページのURL"> -->
+    <meta property=”og:url” content=”mac020k.com” />
 </head>
 
 <body>
