--- a/JP/Profile/index.html
+++ b/JP/Profile/index.html
@@ -24,12 +24,9 @@
     <meta name="description" content="神戸高専 専攻科 電気電子工学専攻 SAI所属 大塚 晟 ホームぺージ。トピック:電子工学，HCI，耳ぴく入力"/>
     <title>About | 大塚 晟</title>
     
-    <!-- まだ -->
-    <!-- <meta property=”og:title” content=”About | 大塚 晟” />
-    <meta property=”og:image” content=”” />
-    <meta property=”og:description” content=”ディスクリプション” />
-    <meta property=”og:url” content=”URL” />
-    <link rel="canonical" href="正規ページのURL"> -->
+    <meta property=”og:title” content=”大塚晟のホームページ” />
+    <meta property=”og:image” content=””/>
+    <meta property=”og:url” content=”mac020k.com” />
 </head>
 
 <body>
